--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ Pygments==2.15.1
 PyJWT==2.7.0
 pymongo==4.3.3
 Pympler==1.0.1
+pyodbc==4.0.39
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
